--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# 📦 Dependencies
 node_modules/
+jspm_packages/
+
+# 🔐 Security & Secrets
 .env
-price_db.json
+.env.local
+.env.sample
+*.pem
+*.key
+
+# 🍎 OS Metadata
+.DS_Store
+.AppleDouble
+.LSOverride
+Thumbs.db
+
+# 📝 Logs & Debugging
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 🏗️ Build Outputs
+dist/
+build/
+out/
